--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,3 @@
-
-
 body {
   font-family: Roboto;
   align-items: center;
@@ -16,11 +14,11 @@ ul {
 
 .header, .main-top {
   background-color: #1F2937;
-  color: white;
+  color: #F9FAf8;
   padding-top: 30px;
 }
 
-.header, .main-top, .main-middle, .main-bottom, .call-to-action, .footer {
+.header, .main-top, .main-middle, .main-bottom, .call-container, .footer {
   padding-left: 200px;
   padding-right: 200px;
 }
@@ -71,10 +69,6 @@ h1 {
   padding: 4px 18px;
 }
 
-.call-to-action {
-  background-color: #3882F6;
-}
-
 .main-middle {
   display: flex;
   flex-direction: column;
@@ -117,4 +111,69 @@ h1 {
   font-style: italic;
   color: #1F2937;
   background-color: #E5E7Eb;
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+.class {
+  width: 300px;
+}
+
+.quote-author {
+  margin-left: auto;
+  font-size: 14px;
+  color: black;
+}
+
+.call-container {
+  display: flex;
+  background-color: white;
+  align-items: center;
+  justify-content: center;
+}
+
+.call-to-action {
+  background-color: #3882F6;
+  border-radius: 5px;  
+  color: #F9FAf8;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 30px;
+  font-size: 12px;
+  padding: 10px 40px;
+  margin-top: 44px;
+  margin-bottom: 44px;
+}
+
+.call-to-action > button {
+  background-color: #3882F6;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  color: #F9FAf8;
+  border: 1px solid #F9FAF8;
+  font-size: 24px;
+  border-radius: 4px;
+  padding: 4px 18px;
+  flex-shrink: 0;
+}
+
+.footer {
+  background-color: #1F2937;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #F9FAf8;
+  font-size: 12px;
+}
+
+h3 {
+  font-size: 16px;
+  color: #F9FAf8; 
+}
